<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="20dp"
    tools:context=".SignUpActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textAlignment="textStart"
            android:textColor="@color/title" />

        <EditText
            android:id="@+id/editTextTextPersonAddress2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:background="@drawable/rect_border"
            android:autofillHints="name"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mail"
            android:textAlignment="textStart"
            android:textColor="@color/title" />

        <EditText
            android:id="@+id/editTextTextEmailAddress3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/mail"
            android:padding="10dp"
            android:background="@drawable/rect_border"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textAlignment="textStart"
            android:textColor="@color/title" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@drawable/rect_border"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:autofillHints="password" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp"/>

        <Button
            android:id="@+id/signUpGuestBtn"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:text="@string/register_guest" />

        <Button
            android:id="@+id/signUpMemberBtn"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:text="@string/register_member" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/OR"
            android:textAlignment="center"
            android:textColor="@color/bk_gold"
            android:textSize="15sp"/>
        <Button
            android:id="@+id/loginPageBtn"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:text="@string/login"
            android:textColor="@color/bk_red"
            android:theme="@style/Button.Secondary" />



</LinearLayout>