<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".UI.CreateEventActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/team_name"
        android:textAlignment="textStart"
        android:textColor="@color/title" />

    <EditText
        android:id="@+id/teamNameEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:padding="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rect_border"
        android:hint="@string/team_name"
        android:inputType="textPersonName"
        android:autofillHints="name"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/when"
        android:layout_marginTop="10dp"
        android:textAlignment="textStart"
        android:textColor="@color/title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:paddingTop="10dp"
        android:orientation="horizontal">
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_border_red"
            app:cardCornerRadius="20dp"
            android:padding="10dp">
            <TextView
                android:id="@+id/show_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_margin="10dp"
                android:text="2020-11-05"/>
        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/datePicker"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/circle_imageview_black"
            android:src="@drawable/ic_action_more_light"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vælg_bane" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description_of_event"
        android:textAlignment="textStart"
        android:textColor="@color/title" />

    <EditText
        android:id="@+id/descEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:lines="8"
        android:gravity="top|start"
        android:background="@drawable/rect_border"
        android:padding="10dp"
        android:hint="@string/description_of_event"
        android:inputType="textMultiLine" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <Button
        android:id="@+id/createBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/create" />

    <Button
        android:id="@+id/backBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/back" />

</LinearLayout>