<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UI.profile.ProfileFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/logo_bkskjold"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/editProfileNameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:textSize="25dp"
        android:textStyle="bold"
        android:text="Jens Jørgen Tomassen"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:textSize="20dp"
        android:text="@string/userpage_phone" />

    <EditText
        android:id="@+id/editProfilePhoneEt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textSize="20dp"
        android:text="10203040" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:textSize="20dp"
        android:text="@string/userpage_mail" />

    <EditText
        android:id="@+id/editProfileMailEt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textSize="20dp"
        android:text="testmail@testmail.test" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="bottom"
        android:weightSum="2"
        android:orientation="vertical">

        <Button
            android:id="@+id/editProfileAcceptBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_border_red"
            android:text="@string/edit_userpage_accept" />

        <Button
            android:id="@+id/editProfileCancelBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_border_white"
            android:textColor="@color/bk_red"
            android:text="@string/edit_userpage_cancel" />

    </LinearLayout>




</LinearLayout>

