<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UI.SearchFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="2">
            <CalendarView
                android:id="@+id/calendarView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/calendarRV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scrollbars="vertical">

            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/menuFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_action_menu_light"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:contentDescription="@string/menu" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/createFab"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/ic_action_add_light"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="100dp"
        android:contentDescription="@string/create" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/filterFab"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/ic_action_filter_light"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="175dp"
        android:contentDescription="@string/filter" />

</RelativeLayout>