<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UI.SearchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/topViewLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_border_bottom"
            android:orientation="vertical"
            android:gravity="center">

            <CalendarView
                android:id="@+id/calendarViewSearch"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:visibility="visible"
                android:minDate="01/01/2021"
                android:theme="@style/CalenderViewCustom"
                android:dateTextAppearance="@style/CalenderViewDateCustomText"
                android:weekDayTextAppearance="@style/CalenderViewWeekCustomText" />

            <FrameLayout
                android:id="@+id/calendarToggleFL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp">
                <androidx.cardview.widget.CardView
                    android:layout_width="50dp"
                    android:layout_height="5dp" />
            </FrameLayout>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/calendarRV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical">

        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/menuFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        app:backgroundTint="@color/bk_gold"
        android:src="@drawable/ic_action_menu_light"
        app:tint="@android:color/white"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:contentDescription="@string/menu" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/createFab"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/ic_action_add_light"
        android:backgroundTint="@color/bk_red"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="100dp"
        app:tint="@android:color/white"
        app:backgroundTint="@color/white"
        app:borderWidth="1dp"
        android:contentDescription="@string/create" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/editEventFab"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/ic_action_dashboard_light"
        android:layout_marginEnd="25dp"
        app:tint="@android:color/white"
        android:backgroundTint="@color/bk_red"
        app:backgroundTint="@color/white"
        app:borderWidth="1dp"
        android:layout_marginBottom="175dp"
        android:contentDescription="@string/admin_events" />

</RelativeLayout>